--- a/client/fields.jade
+++ b/client/fields.jade
@@ -693,7 +693,7 @@ template(name='array_edit')
         //- +clear_value                
     if field_value
         each field_value
-            .ui.large.black.label
+            .ui.large.label
                 i.delete.icon.remove_element
                 |#{this}
                 
@@ -712,7 +712,7 @@ template(name='array_view')
             else
                 |#{this}
         each field_value
-            .ui.large.black.label #{this}
+            .ui.large.label #{this}
 
 
 template(name='children_edit')
@@ -803,7 +803,7 @@ template(name='child_view')
 
 template(name='youtube_edit')
     .ui.labeled.fluid.icon.input
-        .ui.black.label 
+        .ui.label 
             // if icon
             //     i.icon(class=icon)
             |youtube id
@@ -910,7 +910,7 @@ template(name='single_doc_view')
             //- +i name=icon
         .ui.inline.header(title=key)
             |#{title}
-        .ui.black.label
+        .ui.label
             //- if icon
             //-     i.icon(class=icon)
                 //- +i name=icon classes='ui middle aligned image'
@@ -985,7 +985,7 @@ template(name='multi_doc_view')
         .ui.inline.header(title=key)
             |#{title}
         each field_value
-            .ui.large.black.label
+            .ui.large.label
                 |#{this}
 
 
