--- a/client/grid.jade
+++ b/client/grid.jade
@@ -21,4 +21,4 @@ template(name='grid')
                         //-     i.eye.icon
                         if is_dev
                             each view_roles
-                                .ui.black.small.label #{this}
+                                .ui.small.label #{this}
