--- a/components/delta/model.jade
+++ b/components/delta/model.jade
@@ -35,7 +35,7 @@ template(name='model_edit')
                                 if faceted
                                     i.filter.icon
                                 each view_roles
-                                    .ui.small.black.label #{this}
+                                    .ui.small.label #{this}
                                 i.large.dropdown.icon
                             +field_edit
 
