--- a/components/maintenance/view_key.jade
+++ b/components/maintenance/view_key.jade
@@ -38,7 +38,7 @@ template(name='view_key')
                         .field
                             label Fowler
                             if fpm
-                                .ui.basic.black.label FPM
+                                .ui.basic.label FPM
                         .field
                             label Notes
                             |#{notes}
