--- a/client/home.jade
+++ b/client/home.jade
@@ -15,7 +15,6 @@ template(name='home')
             .four.wide.column
                 div
                 .ui.inline.grey.header
-                    i.poll.grey.icon
                     |polls
                 .mediumscroll
                     each polls
@@ -36,6 +35,7 @@ template(name='home')
             //-     +market_small
             .four.wide.column
                 +latest_activity
+                .ui.grey.header chat
                 +footer_chat
                 //- +gallery_small
                 .ui.hidden.divider
@@ -125,7 +125,6 @@ template(name='home')
 
 template(name='requests_small')
     .ui.grey.header 
-        i.hand.holding.usd.icon
         |requests
 
 
@@ -149,11 +148,11 @@ template(name='stats_small')
     //- .ui.grey.header total health club sessions this month
     div
     .ui.inline.grey.header
-        strong #{hsd.regist_owners}
+        strong #{hsd.registered_owners}
         small owners
     div
     .ui.inline.grey.header
-        strong #{hsd.regist_residents}
+        strong #{hsd.registered_residents}
         small residents
     
     
@@ -223,11 +222,10 @@ template(name='leaderboard_small')
 
 template(name='services_small')
     a.ui.grey.header(href="/m/service")
-        i.wrench.icon 
         |services
-    .ui.list
+    .ui.link.list
         each services 
-            .item #{title}
+            a.item(href="/service/#{_id}/view") #{title}
 
 template(name='service_slider')
     //- #layerslider(style='width:100%; height: 400px;')
@@ -337,9 +335,9 @@ template(name='health_club_status_small')
 template(name='water_status')
     if is_staff
         if on
-            i.checkmark.link.large.icon.toggle_status
+            i.checkmark.link.icon.toggle_status
         else    
-            i.ban.link.large.icon.toggle_status
+            i.ban.link.icon.toggle_status
     else
         if on
             i.checkmark.large.icon
