--- a/client/resident_portal.jade
+++ b/client/resident_portal.jade
@@ -82,7 +82,6 @@ template(name='resident_portal')
 template(name='karma_leaderboard')
     .ui.grey.header 
         //- +i name='leaderboard'
-        i.yin.yang.icon
         |top karma
     .smallscroll
         each top_karma_users
@@ -233,9 +232,9 @@ template(name='model_scroller')
             +view_button
 
 template(name='health_club_status')
-    .ui.header Upper Hot Tub
+    .ui.header upper hot tub
         +water_status slug='upper_hot_tub'
-    .ui.header Lower Hot Tub
+    .ui.header lower hot tub
         +water_status slug='lower_hot_tub'
-    .ui.header Pool
+    .ui.header pool
         +water_status slug='pool'
