--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -2,7 +2,7 @@ template(name='delta')
     with current_model
         .ui.stackable.padded.grid
             .row
-                .four.wide.column
+                .five.wide.column
                     if is_loading
                         .ui.inline.header
                             +i name=icon classes='ui avatar image'
@@ -15,7 +15,7 @@ template(name='delta')
                             | #{title}
                     unless is_loading
                         if currentUser
-                            .ui.icon.large.compact.button.add_model_doc(title="add #{title}")
+                            .ui.icon.large.basic.button.add_model_doc(title="add #{title}")
                                 //- +i name='plus' classes='ui avatar image'
                                 i.plus.icon
                         +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' label="bookmark"
@@ -51,7 +51,7 @@ template(name='delta')
                     div
                     each sorted_facets
                         +facet
-                .twelve.wide.column
+                .eleven.wide.column
                     .filter_row.ui.basic.segment(class=loading_class)
                         .ui.inline.small.header
                             |sort by
@@ -102,9 +102,10 @@ template(name='delta')
                         //-             +set_view_mode title='map' icon='map'
                         //-             +set_view_mode title='graph' icon='graph'
                         //- .ui.stackable.four.column.grid
-                        each current_delta.result_ids
-                            //- .column
-                            +delta_result
+                        .scrolling    
+                            each current_delta.result_ids
+                                //- .column
+                                +delta_result
                     //- +Template.dynamic template=view_mode_template
             .row 
                 .sixteen.wide.column
@@ -175,8 +176,8 @@ template(name='facet')
             if name
                 .selector.ui.large.compact.button.toggle_selection(class=toggle_value_class)
                     strong #{name}
-                    if is_admin
-                        small #{cal_count} #{count}
+                    //- if is_admin
+                    small #{cal_count} #{count}
             else
                 .selector.ui.compact.button.toggle_selection(class=toggle_value_class)
                     strong [null]
@@ -200,7 +201,7 @@ template(name='delta_result')
         if template_exists
             +Template.dynamic template=model_template
         else
-            .ui.result.cloud.fluid.secondary.segment(class=loading_class tabindex="0")
+            .ui.result.cloud.fluid.segment(class=loading_class tabindex="0")
                 .content
                     each fields
                         +Template.dynamic template=view_template 
