--- a/components/delta/model_doc.jade
+++ b/components/delta/model_doc.jade
@@ -9,7 +9,7 @@ template(name='model_doc_edit')
                         .ui.header(title="model: #{model}")
                             |edit #{model}
                         +creation_info
-                        a.ui.big.icon.basic.button(href="/m/#{current_model.slug}/#{_id}/view")
+                        a.ui.big.icon.basic.button(href="/m/#{model}/#{_id}/view")
                             i.big.checkmark.icon
                         #delete_doc.ui.icon.basic.button
                             i.trash.icon
@@ -46,13 +46,13 @@ template(name='model_doc_view')
                                 i.clock.icon
                                 |timestamp tags
                             each _timestamp_tags
-                                .ui.black.label #{this}
+                                .ui.label #{this}
                         +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' label='bookmark' color='red'
                         div
                         .ui.small.header #{views} views
                         .ui.small.inline.header by
                         each viewer_usernames
-                            .ui.small.black.label #{this}
+                            .ui.small.label #{this}
                         
                         .ui.small.header
                             |by
