--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -28,45 +28,45 @@ template(name='staff')
                     //- +i name='android-tablet' classes='ui mini inline image'
                     | kiosk view
     
-                //- +add_button model='work_order' label='work order'
-                //- +add_button model='communication' label='communication'
-                //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
-                //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
-                //- +unit_key_widget
-                //- a.ui.compact.fluid.large.button(href='readings')
-                //-     //- +i name='water' classes='ui inline image'                
-                //-     strong water
-                //- div
-                //- //- +ismall name='swim'
-                //- .ui.inline.grey.header 
-                //-     |pool
-                //- each shift_pool_readings
-                //-     .item #{ph}ph #{br}br #{temperature}deg #{when}
-                //-         if ph_message
-                //-             .ui.basic.label #{ph_message}
-                //-         if chlorine_message
-                //-             .ui.basic.label #{chlorine_message}
-                //- div
-                //- //- +ismall name='jacuzzi'
-                //- .ui.inline.grey.header 
-                //-     |upper hot tub
-                //- each shift_upper_hot_tub_readings
-                //-     .item #{ph}ph #{br}br #{temperature}deg #{when}
-                //-         if ph_message
-                //-             .ui.basic.label #{ph_message}
-                //-         if chlorine_message
-                //-             .ui.basic.label #{chlorine_message}
-                //- div
-                //- //- +ismall name='jacuzzi'
-                //- .ui.inline.grey.header 
-                //-     |lower hot tub
-                //- each shift_lower_hot_tub_readings
-                //-     .item #{ph}ph #{br}br #{temperature}deg #{when}
-                //-         if ph_message
-                //-             .ui.basic.label #{ph_message}
-                //-         if chlorine_message
-                //-             .ui.basic.label #{chlorine_message}
-                //- .ui.hidden.divider
+                +add_button model='work_order' label='work order'
+                +add_button model='communication' label='communication'
+                +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
+                +add_button model='shift_checklist' label='shift checklist'
+                +unit_key_widget
+                a.ui.compact.fluid.large.button(href='readings')
+                    //- +i name='water' classes='ui inline image'                
+                    strong water
+                div
+                //- +ismall name='swim'
+                .ui.inline.grey.header 
+                    |pool
+                each shift_pool_readings
+                    .item #{ph}ph #{br}br #{temperature}deg #{when}
+                        if ph_message
+                            .ui.basic.label #{ph_message}
+                        if chlorine_message
+                            .ui.basic.label #{chlorine_message}
+                div
+                //- +ismall name='jacuzzi'
+                .ui.inline.grey.header 
+                    |upper hot tub
+                each shift_upper_hot_tub_readings
+                    .item #{ph}ph #{br}br #{temperature}deg #{when}
+                        if ph_message
+                            .ui.basic.label #{ph_message}
+                        if chlorine_message
+                            .ui.basic.label #{chlorine_message}
+                div
+                //- +ismall name='jacuzzi'
+                .ui.inline.grey.header 
+                    |lower hot tub
+                each shift_lower_hot_tub_readings
+                    .item #{ph}ph #{br}br #{temperature}deg #{when}
+                        if ph_message
+                            .ui.basic.label #{ph_message}
+                        if chlorine_message
+                            .ui.basic.label #{chlorine_message}
+                .ui.hidden.divider
                 .ui.inline.grey.header 
                     //- i.hiking.icon
                     //- +i name='walking' classes='ui inline image'                
@@ -88,17 +88,13 @@ template(name='staff')
                         |checklist not completed
 
             .twelve.wide.column
-                .ui.stackable.four.cards
-                    each sessions
-                        +hc_session
-        
-                //- .ui.fluid.accordion
-                //-     .active.title
-                //-         //- i.users.large.grey.icon
-                //-         //- +i name='groups' classes='ui inline mini image'
-                //-         .ui.inline.grey.header #{checkedin_members.count} checked in members
-                //-         i.dropdown.grey.icon
-                //-     .active.content
+                .ui.fluid.accordion
+                    .active.title
+                        //- i.users.large.grey.icon
+                        //- +i name='groups' classes='ui inline mini image'
+                        .ui.inline.grey.header #{checkedin_members.count} checked in members
+                        i.dropdown.grey.icon
+                    .active.content
                         .ui.stackable.four.cards
                             each sessions
                                 +hc_session
@@ -116,12 +112,12 @@ template(name='staff')
                         i.dropdown.grey.icon
                     .content
                         +schedule
-                    //- .title
-                    //-     +i name='chat' classes='ui inline mini image'
-                    //-     |chat
-                    //-     i.dropdown.icon
-                    //- .content
-                    //-     +view_chats
+                    .title
+                        //- +i name='chat' classes='ui inline mini image'
+                        .ui.grey.inline.header chat
+                        i.dropdown.icon
+                    .content
+                        +view_chats
     
     
 
@@ -129,10 +125,10 @@ template(name='hc_session')
     .ui.card
         a.zoom(href="/user/#{session_resident.username}")
             if session_resident.kiosk_photo
-                img.ui.invert.image(src="{{c.url session_resident.kiosk_photo width=300 height=300 gravity='face' crop='fill'}}")
+                img.ui.image(src="{{c.url session_resident.kiosk_photo width=300 height=300 gravity='face' crop='fill'}}")
             else
                 //- |old photo
-                    img.ui.invert.image(src="{{c.url session_resident.image_id width=300 height=300 gravity='face' crop='fill'}}")
+                    img.ui.image(src="{{c.url session_resident.image_id width=300 height=300 gravity='face' crop='fill'}}")
         .content
             a(href="/user/#{session_resident.username}")
                 .ui.inline.grey.header
